--- a/pccs.css
+++ b/pccs.css
@@ -5,7 +5,7 @@
   font-family: -apple-system, sans-serif;
 }
 body {
-  background-color: white;
+  background-color: gray;
 }
 header {
   background-color: #666;
@@ -79,7 +79,17 @@ footer a {
 #controler div:hover {
   opacity: 80%;
 }
-#popup {
+/* #popup {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+} */
+#popup div {
   width: 100%;
   height: 100%;
   position: fixed;
