--- a/pccs.css
+++ b/pccs.css
@@ -8,17 +8,22 @@ body {
   background-color: gray;
 }
 header {
-  background-color: #666;
   height: 3rem;
+  max-width: 30rem;
+  margin: auto;
   margin-bottom: 1rem;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
 }
-header div.title {
-  margin: auto;
-  font-size: 2rem;
-  color: white;
+header #title_image {
+  height: 2rem;
+  width: 2rem;
+  margin: 8px;
+  border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 main {
   max-width: 30rem;
@@ -57,6 +62,13 @@ main.square article section {
   font-family: serif;
   font-style: italic;
 }
+footer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  max-width: 30rem;
+  margin: auto;
+}
 footer a {
   text-decoration: none;
   color: white;
@@ -68,17 +80,36 @@ footer a {
   margin-top: 1rem;
   margin-bottom: 1rem;
   justify-content: space-around;
+  align-items: center;
 }
 #controler div {
-  width: 5rem;
-  height: 48px;
+  width: 3rem;
+  height: 3rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 1rem;
+  border-radius: 100%;
+  font-size: 2rem;
+}
+#controler div.multi {
+  width: 4rem;
+  height: 4rem;
+  font-size: 3rem;
 }
 #controler div:hover {
   opacity: 80%;
+}
+#indicator {
+  margin: auto;
+  margin-right: 0;
+}
+#indicator span {
+  margin: 1rem;
+  padding: 0.25rem;
+  border-radius: 0.5rem;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
 }
 /* #popup {
   width: 100%;
