--- a/pccs.css
+++ b/pccs.css
@@ -172,10 +172,7 @@ footer a {
 }
 #developer {
   margin: auto;
-  margin-right: 0.5rem;
-  padding: 0.5rem;
-  background-color: gray;
-  border-radius: 0.5rem;
+  margin-right: 1rem;
   text-decoration: none;
-  color: white;
+  color: gray;
 }
